--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "e2e": "ng e2e"
   },
   "dependencies": {
-    "@agm/core": "^1.0.0-beta.5",
+    "@agm/core": "^1.1.0",
     "@angular/animations": "8.0.0",
     "@angular/common": "8.0.0",
     "@angular/compiler": "8.0.0",
@@ -43,6 +43,7 @@
     "enhanced-resolve": "3.3.0",
     "flot": "themicon/flot",
     "fullcalendar": "3.9.0",
+    "googlemaps": "^1.12.0",
     "ika.jvectormap": "themicon/ika.jvectormap",
     "intl": "1.2.5",
     "jqcloud2": "2.0.3",
@@ -87,11 +88,12 @@
     "@angular/cli": "8.0.0",
     "@angular/compiler-cli": "8.0.0",
     "@angular/language-service": "8.0.0",
-    "@types/node": "10.12.3",
     "@types/codemirror": "0.0.67",
+    "@types/googlemaps": "^3.38.1",
     "@types/jasmine": "3.3.8",
     "@types/jasminewd2": "2.0.3",
     "@types/lodash": "4.14.118",
+    "@types/node": "10.12.3",
     "codelyzer": "5.0.0",
     "jasmine-core": "3.4.0",
     "jasmine-spec-reporter": "4.2.1",
