--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "jquery.flot.spline": "themicon/jquery.flot.spline",
     "jquery.flot.tooltip": "github:krzysu/flot.tooltip",
     "lodash": "^4.17.15",
+    "magnific-popup": "^1.1.0",
     "modernizr": "3.7.1",
     "moment": "2.22.2",
     "ng2-charts": "1.6.0",
@@ -68,10 +69,13 @@
     "ngx-color-picker": "7.0.2",
     "ngx-infinite-scroll": "6.0.1",
     "ngx-select-ex": "3.6.7",
+    "owl.carousel": "^2.3.4",
+    "parallax-js": "^3.1.0",
     "popper.js": "1.14.3",
     "rxjs": "6.4.0",
     "rxjs-compat": "6.1.0",
     "screenfull": "3.3.3",
+    "scrollup": "^1.0.1",
     "simple-line-icons": "2.4.1",
     "source-sans-pro": "2.40.0",
     "spinkit": "1.2.5",
@@ -81,6 +85,7 @@
     "tslib": "1.9.0",
     "weather-icons": "github:erikflowers/weather-icons",
     "web-animations-js": "2.2.1",
+    "wowjs": "^1.1.3",
     "zone.js": "0.9.1"
   },
   "devDependencies": {
